[workspace]
resolver = "2"
members = [
    "crates/svelters-codegen"
]

[package]
name = "svelters"
version = "0.0.1"
edition = "2021"
authors = ["James Birtles <james.birtles@peopleplus.co.uk>"]
description = "Svelte parser written in Rust with error recovery and handling in mind"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/StafflinePeoplePlus/svelters"
keywords = ["svelte", "compiler"]
categories = ["parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99"
muncher = "0.7"
serde = { version = "1", features = ["derive"] }
swc_common = "0.31"
swc_ecma_ast = { version = "0.103", features = ["serde-impl"] }
swc_ecma_parser = { version = "0.133", features = ["debug"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
gloo-utils = "0.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
