[package]
name = "svelters"
version = "0.0.1"
edition = "2021"
authors = ["James Birtles <james.birtles@peopleplus.co.uk>"]
description = "Svelte parser written in Rust with error recovery and handling in mind"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/StafflinePeoplePlus/svelters"
keywords = ["svelte", "compiler"]
categories = ["parser-implementations"]

[dependencies]
rowan = "0.15"

[dev-dependencies]
pretty_assertions = "1.4.0"
